Kubernetes/MultiPathURL-exam/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-app-service2
spec:
  selector:
    app: netflix-app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
